--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
             <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
             <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+
+        <style type="text/css">
+            .loading {
+                background-color: #ccc;
+                padding: 20px;
+                font-weight: bold;
+                font-size: 16px;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
 
@@ -29,18 +39,18 @@
                     </ul>
                     <p id="current-image" class="text-center center-block"></p>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-xs-6">
                     <h2 class="text-center">Google Cloud Vision API</h2>
                     <p id="gcp-results"></p>
                 </div>
-                <div class="col-xs-3">
+                <!-- <div class="col-xs-3">
                     <h2 class="text-center">Microsoft Azure Vision API</h2>
                     <p id="azure-results"></p>
                 </div>
                 <div class="col-xs-3">
                     <h2 class="text-center">Roll Your Own</h2>
                     <p id="ryo-results"></p>
-                </div>
+                </div> -->
             </div>
         </div>
 
@@ -66,7 +76,7 @@
 
                 gcp.empty();
 
-                gcp.attr('style', 'background-color:#ccc;');
+                gcp.addClass("loading");
                 gcp.append("<p>Loading...</p>");
 
                 axios.post('https://vision.googleapis.com/v1/images:annotate?key=' + GCP_API_KEY, {
@@ -109,7 +119,7 @@
                         } else {
                             result = $('<h4 class="text-center">NOT HOT DOG</h4>');
                         }
-                        gcp.attr('style', 'background-color:#fff;');
+                        gcp.removeClass("loading");
                         gcp.empty().append(result);
                     } else {
                         gcp.append("<p>There was an error: " + response.data.responses[0].error.message + "</p>");
