--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 gcp.empty();
 
                 gcp.addClass("loading");
-                gcp.append("<p>Loading...</p>");
+                gcp.append("<p>Reticulating Splines...</p>");
 
                 axios.post('https://vision.googleapis.com/v1/images:annotate?key=' + GCP_API_KEY, {
                     "requests": [
